Remove the need for relative positioning causing layout issues

--- a/wagtailio/static/css/components/header.scss
+++ b/wagtailio/static/css/components/header.scss
@@ -4,7 +4,7 @@
 
 */
 .header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 20;
